# rise-of-empires

./: .cursorrules  .gitignore  Cargo.toml  README.md  openmemory.md
.github/workflows/: ci.yml
assets/data/empires/: aztecs.roe  chinese.roe  egyptians.roe  greeks.roe  mongols.roe  persians.roe  romans.roe  russians.roe  vikings.roe
client/: Cargo.toml  Trunk.toml  index.html
client/assets/data/: animations.roe  techs.roe  units.ron
client/assets/sprites/: ASSET_GUIDE.md  README.md
client/src/: bridge.rs  camera.rs  game_state.rs  input.rs  main.rs  save_load.rs
client/src/render/: animation.rs  building.rs  feedback.rs  grid.rs  mod.rs  selection.rs  sprites.rs  units.rs
client/src/ui/: building_panel.rs  debug_overlay.rs  empire_select.rs  leader_select.rs  main_menu.rs  mod.rs  pause_menu.rs  play_menu.rs  resources.rs  selection.rs  tech_panel.rs
docs/: packaging.md
shared/: Cargo.toml
shared/src/: commands.rs  empires.rs  ids.rs  lib.rs  resources.rs  snapshot.rs
sim/: Cargo.toml
sim/src/: lib.rs  rng.rs  tick.rs  world.rs
sim/src/components/: building.rs  gatherer.rs  health.rs  mod.rs  owner.rs  resource_node.rs  unit.rs
sim/src/data/: empire_data.rs  game_data.rs  mod.rs  tech_data.rs  unit_data.rs
sim/src/systems/: combat.rs  command_processor.rs  gather.rs  mod.rs  movement.rs  production.rs  snapshot.rs  tech.rs
sim/src/tests/: command_ordering.rs  determinism.rs  mod.rs
tools/: Cargo.toml  organize_sprites.py  process_sprites.py
tools/src/: hash.rs  lib.rs
