[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Bevy client for Rise RTS: rendering, input, UI"

[dependencies]
shared = { workspace = true }
sim = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
bevy_egui = { workspace = true }

# Bevy with 2D-only features (no PBR for smaller WASM)
[dependencies.bevy]
workspace = true
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_state",
    "bevy_log",
    "webgl2",
    "png",
    "default_font",
]

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5.0"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }

# Native: add back extra features for development
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
workspace = true
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_picking",
    "bevy_state",
    "bevy_log",
    "file_watcher",
    "multi_threaded",
    "x11",
    "wayland",
    "png",
]
